overlay width fixed in size & not responsive

--- a/packages/lab/src/overlay/Overlay.css
+++ b/packages/lab/src/overlay/Overlay.css
@@ -18,6 +18,7 @@
 
   color: var(--saltOverlay-text-color, var(--salt-text-primary-foreground));
   z-index: var(--saltOverlay-zIndex, var(--salt-zIndex-flyover));
+  width: max-content;
 }
 
 .saltOverlay-container {
